--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,3 +17,16 @@
   font-size: large;
 }
 
+table, th, td {
+  border: 1px solid black;
+}
+
+table {
+   margin-left:auto; 
+    margin-right:auto;
+}
+
+.Review {
+    margin-left:auto; 
+    margin-right:auto;
+}
